<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvToDoName"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/todo_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Weed the Garden" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Today" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:text="High" />

</LinearLayout>