<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bfr.taskminder.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/today"
            style="@style/CategoryStyle"
            android:background="@color/category_today"
            android:text="@string/category_today"
            android:onClick="openTodayList"
            />

        <TextView
            android:id="@+id/thisWeek"
            style="@style/CategoryStyle"
            android:background="@color/category_thisWeek"
            android:text="@string/category_thisWeek"
            android:onClick="openThisWeekList"
            />

        <TextView
            android:id="@+id/bucketList"
            style="@style/CategoryStyle"
            android:background="@color/category_bucketList"
            android:text="@string/category_bucketList"
            android:onClick="openBucketList"
            />

        <TextView
            android:id="@+id/backBurner"
            style="@style/CategoryStyle"
            android:background="@color/category_backBurner"
            android:text="@string/category_backBurner"
            />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
