<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bfr.taskminder.EditItemActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/item_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginTop="64dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectedDueDate" />

    <EditText
        android:id="@+id/tvNotes"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:ems="10"
        android:hint="@string/enter_notes"
        android:inputType="textMultiLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvNotes"
        android:layout_marginBottom="36dp" />



    <Button
        android:id="@+id/btnSaveItem"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_item"
        android:onClick="onSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvSelectedDueDate"
        android:layout_width="120dp"
        android:layout_height="29dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectDate"
        app:layout_constraintTop_toTopOf="@+id/btnSelectDate"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/tvSelectPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_priority"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="138dp"
        app:layout_constraintTop_toTopOf="@+id/tvNotes"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spPriority"
        android:layout_width="174dp"
        android:layout_height="29dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectPriority"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/tvSelectPriority" />

    <TextView
        android:id="@+id/tvSelectStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_status"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="88dp" />

    <Spinner
        android:id="@+id/spStatus"
        android:layout_width="178dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectStatus"
        app:layout_constraintTop_toTopOf="@+id/tvSelectStatus"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
